--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,105 @@
+* { box-sizing: border-box; }
 
+body {
+  font-family: sans-serif;
+}
+
+.container {
+  margin: auto;
+display: block;
+width: 100%;
+margin: 10%;
+}
+
+button:focus { outline: none; }
+
+/* ---- button ---- */
+
+.button {
+  display: inline-block;
+  padding: 0.5em 1.0em;
+  background: #fff;
+  border: none;
+  color: #222;
+  font-family: sans-serif;
+  font-size: 20px;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.button:hover {
+  background-color: grey;
+  color: white;
+}
+
+.button:active,
+.button.is-checked {
+  background-color: black;
+}
+
+.button.is-checked {
+  color: white;
+  text-shadow: 0 -1px hsla(0, 0%, 0%, 0.8);
+}
+
+.button:active {
+  box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
+}
+
+/* ---- button-group ---- */
+
+.button-group {
+margin-bottom: 20px;
+margin-right: 20px;
+display: inline-block;
+}
+
+.button-group:after {
+
+}
+
+.button-group .button {
+
+}
+
+
+
+/* ---- isotope ---- */
+
+.grid {
+
+}
+
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .element-item ---- */
+
+.element-item {
+  position: relative;
+  float: left;
+  width: 500px;
+  height: 250px;
+  margin: 5px;
+  padding: 10px;
+  background: #888;
+  color: #262524;
+}
+
+.element-item.events {
+  background: green;
+
+}
+
+.element-item > * {
+  margin: 0;
+  padding: 0;
+}
+
+.plyr--video .plyr__controls {
+display: none;
+}
