fix menu div z-index problem on larger screen sizes

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7964,3 +7964,9 @@ $fast-drawer-transition: transform 0.55s cubic-bezier(0.645, 0.045, 0.355, 1);
 .featured-collection__view-all {
   text-align: center;
 }
+
+/* puppycodes */
+
+.topframe {
+  z-index: 0;
+}
