--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7965,7 +7965,7 @@ $fast-drawer-transition: transform 0.55s cubic-bezier(0.645, 0.045, 0.355, 1);
   text-align: center;
 }
 
-/* puppycodes */
+/* puppycodes overrides */
 
 .topframe {
   z-index: 0;
