--- a/sections/video-gallery.liquid
+++ b/sections/video-gallery.liquid
@@ -1,24 +1,34 @@
 <div id="video-gallery">
-<span> Video Gallery Content </span>
+<div class="grid-wrapper">
+  {% for block in section.blocks %}
+    <div class="grid-number" {{ block.shopify_attributes }}>
+      {% case block.type %}
+      {% when 'text' %}
+      <div data-type="vimeo" data-video-id="{{ block.settings.content }}"></div>
+      {% endcase %}
+    </div>
+  {% endfor %}
+
+</div>
+
+
+
 </div>
 
 {% schema %}
 {
-  "name": "Video Gallery",
-  "class": "index-section index-section--video",
-  "settings": [
-    {
-      "type": "text",
-      "id": "video_gallery_link",
-      "label": "Video link",
-      "default": "https:\/\/www.vimeo.com\/257020713"
-    }
-  ],
-  "presets": [
-    {
-      "name": "Video Gallery",
-      "category": "Video Gallery"
-    }
-  ]
-}
+   "blocks": [
+     {
+       "type": "text",
+       "name": "Vimeo link",
+       "settings": [
+         {
+           "id": "content",
+           "type": "text",
+           "label": "ID"
+         }
+       ]
+     }
+   ]
+ }
 {% endschema %}
