--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -5589,6 +5589,8 @@ input[type='number'].product-form__quantity-input {
 
 .section-header__title {
   margin-bottom: 0;
+  text-transform: uppercase;
+  font-size: 25px;
 }
 
 .section-header__description,
@@ -7976,12 +7978,29 @@ $fast-drawer-transition: transform 0.55s cubic-bezier(0.645, 0.045, 0.355, 1);
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-column-gap: 1px;
   grid-row-gap: 1px;
-  background-color: white;
 }
 
 .grid-number {
-  background-color: transparent;
   display: grid;
   color: white;
   margin: 10px;
+  margin-bottom: 30px;
+}
+
+.grid-number:first-child {
+  grid-column: 1 / 3;
+}
+
+
+.caption ul {
+margin-top: 15px;
+margin-left: 0;
+list-style-type: none;
+padding: 0;
+line-height: 1.3;
+font-size: 14px;
+}
+
+.caption li {
+  margin: 0;
 }
