--- a/sections/video-gallery.liquid
+++ b/sections/video-gallery.liquid
@@ -2,9 +2,16 @@
 <div class="grid-wrapper">
   {% for block in section.blocks %}
     <div class="grid-number" {{ block.shopify_attributes }}>
-      {% case block.type %}
+      {% case block.type | first %}
       {% when 'text' %}
       <div data-type="vimeo" data-video-id="{{ block.settings.content }}"></div>
+      <div class="caption">
+        <ul>
+          <li>{{ block.settings.meta1 }}</li>
+          <li>{{ block.settings.meta2 }}</li>
+          <li>{{ block.settings.meta3 }}</li>
+        </ul>
+      </div>
       {% endcase %}
     </div>
   {% endfor %}
@@ -26,7 +33,22 @@
            "id": "content",
            "type": "text",
            "label": "ID"
-         }
+         },
+         {
+          "id": "meta1",
+          "type": "text",
+          "label": "Caption Line"
+        },
+        {
+         "id": "meta2",
+         "type": "text",
+         "label": "Caption Line"
+       },
+       {
+        "id": "meta3",
+        "type": "text",
+        "label": "Caption Line"
+      }
        ]
      }
    ]
