add video single section

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8039,3 +8039,10 @@ display: none;
 .navigation-open .site-header__logo-image {
   opacity: 0;
 }
+
+#video-single {
+  padding-top: 100px;
+  max-width: 80%;
+  margin: auto;
+  position: relative;
+}
