--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -93,6 +93,8 @@
   <div class="main-content" data-drawer-push>
     <div class="main-content__wrapper">
 
+      {% section 'video-single' %}
+
       <main class="content-for-layout" id="MainContent" role="main">
         {{ content_for_layout }}
       </main>
